repos/makepy/contents/test/fail/ImportTwice.rules
import ../touches

import ../touches

x:
